modificacion en los estilos

--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
       </select>
     </section>
 
-    <!--Botones para agregar columnas y filas-->
-    <button>+</button>
-    <button>+</button>
-
     <table>
       <tbody>
         <thead>
@@ -234,6 +230,10 @@
 
       </tbody>
     </table>
+
+    <!--Botones para agregar columnas y filas-->
+    <button id="column-vertical">+</button>
+    <button id="column-horizontal">+</button>
   </div>
 
   <script src="js/script.js"></script>
